--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -231,12 +231,14 @@
     <Content Include="Views\Producto\_Productos.cshtml" />
     <Content Include="Views\Producto\_ProductoTienda.cshtml" />
     <Content Include="Views\Producto\Details.cshtml" />
+    <Content Include="Views\Compra\Index.cshtml" />
+    <Content Include="Views\Compra\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Chat\" />
-    <Folder Include="Views\Compra\" />
+    <Folder Include="Views\Detalle\" />
     <Folder Include="Views\Mensaje\" />
     <Folder Include="Views\Tienda\" />
   </ItemGroup>
