--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -233,6 +233,8 @@
     <Content Include="Views\Producto\Details.cshtml" />
     <Content Include="Views\Compra\Index.cshtml" />
     <Content Include="Views\Compra\Details.cshtml" />
+    <Content Include="Views\Compra\DetailsTienda.cshtml" />
+    <Content Include="Views\Producto\ProductoAdmin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
