--- a/Web/packages.config
+++ b/Web/packages.config
@@ -2,9 +2,10 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="5.3.0" targetFramework="net472" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="jQuery" version="3.7.0" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net472" />
+  <package id="log4net" version="2.0.15" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc.es" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
@@ -18,5 +19,7 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="SweetAlert.Bootstrap" version="1.0.1" targetFramework="net472" />
+  <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
