--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -259,7 +259,7 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Login\AfiliarseForm.cshtml" />
     <Content Include="Views\Login\UnAuthorized.cshtml" />
-    <Content Include="Views\Usuario\Perfil.cshtml" />
+    <Content Include="Views\Usuario\PerfilUsuario.cshtml" />
     <Content Include="Views\Direction\_DireccionForm.cshtml" />
     <Content Include="Views\Producto\Edit.cshtml" />
     <Content Include="Views\Direction\_Direcciones.cshtml" />
@@ -270,6 +270,8 @@
     <Content Include="Views\Compra\_CompraCantidad.cshtml" />
     <Content Include="Views\Compra\_DetalleCompra.cshtml" />
     <Content Include="Views\Compra\ConfirmarCompra.cshtml" />
+    <Content Include="Views\Usuario\Usuarios.cshtml" />
+    <Content Include="Views\Usuario\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
