grafico top 5 prod y total ventas

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -275,8 +275,10 @@
     <Content Include="Views\Compra\ConfirmarCompra.cshtml" />
     <Content Include="Views\Usuario\Usuarios.cshtml" />
     <Content Include="Views\Usuario\Edit.cshtml" />
-    <Content Include="Views\Reporte\graficoCompraCount.cshtml" />
     <Content Include="Views\Reporte\_GraficoCompraCount.cshtml" />
+    <Content Include="Views\Compra\EvaluationCompraCliente.cshtml" />
+    <Content Include="Views\Compra\EvaluationCompraVendedor.cshtml" />
+    <Content Include="Views\Compra\ComprasXCliente.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
