--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Controllers\ChatController.cs" />
     <Compile Include="Controllers\CompraController.cs" />
     <Compile Include="Controllers\DirectionController.cs" />
+    <Compile Include="Controllers\EvaluacionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MensajeController.cs" />
